# cryptodiff

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  cryptodiff.cpp  techstack.md  techstack.yml
cmake/: cryptodiff-config.cmake
debian/: changelog  control  copyright  rules
include/: cryptodiff.h
src/: DHT.proto  EncFileMap.cpp  EncFileMap.h  EncFileMap.proto  FileMap.cpp  FileMap.h  LVMap.cpp  LVMap.h  cryptodiff.cpp  cryptodiff.h  distsys.h  main.cpp  main2.123  p2pnet.h  p2pnet_old.h  util.h
src/crypto/: RsyncChecksum.cpp  RsyncChecksum.h  StatefulRsyncChecksum.h
src/impl/: EncFileMap.cpp  EncFileMap.h  EncFileMap.proto  File.h  FileMap.cpp  FileMap.h  pch.h  util.h
src/impl/crypto/: RsyncChecksum.h  StatefulRsyncChecksum.h
src/impl/util/: AvailabilityMap.h  File.h
